--- a/app/views/frontend/components/faq/faq.twig
+++ b/app/views/frontend/components/faq/faq.twig
@@ -4,7 +4,9 @@
     </div>
     <div class="block_item__before"></div>
     <div class="block_item__content">
-        {% include 'frontend/components/materials/materials_list.twig' %}
+        <div class="container">
+            {% include 'frontend/components/faq/faqs_list.twig' %}
+        </div>
     </div>
 
 </div>
