--- a/app/views/manager/global_raw.html.twig
+++ b/app/views/manager/global_raw.html.twig
@@ -23,11 +23,11 @@
     <link rel="stylesheet" href="{{ global.base_url }}/assets/vendors/colorpicker/jquery.colorpicker.css">
     <link rel="stylesheet" href="{{ global.base_url }}/assets/vendors/jstree/dist/themes/default/style.min.css" />
     <link rel="stylesheet" href="{{ global.base_url }}/assets/css/backend.css?{{ assets_version }}">
-    <script src="{{ global.base_url }}/assets/images/sprites/grunticon.loader.js"></script>
+{#    <script src="{{ global.base_url }}/assets/images/sprites/grunticon.loader.js"></script>#}
     <script>
-      grunticon(["{{ global.base_url }}/assets/images/sprites/icons.data.svg.css", "{{ global.base_url }}/assets/images/sprites/icons.data.png.css", "{{ global.base_url }}/assets/images/sprites/icons.fallback.css"], grunticon.svgLoadedCallback);
+      {#grunticon(["{{ global.base_url }}/assets/images/sprites/icons.data.svg.css", "{{ global.base_url }}/assets/images/sprites/icons.data.png.css", "{{ global.base_url }}/assets/images/sprites/icons.fallback.css"], grunticon.svgLoadedCallback);#}
     </script>
-    <noscript><link href="{{ global.base_url }}/assets/images/sprites/icons.fallback.css" rel="stylesheet"></noscript>
+{#    <noscript><link href="{{ global.base_url }}/assets/images/sprites/icons.fallback.css" rel="stylesheet"></noscript>#}
 </head>
 <body {% if global.page.page_class %}class="{{ global.page.page_class }}"{% endif %}>
 
@@ -37,7 +37,7 @@
 
 {#<script type="text/javascript" src="{{ global.base_url }}/assets/js/lang/ru_admin.js"></script>#}
 <script type="text/javascript" src="{{ global.base_url }}/assets/js/backend.js?{{ assets_version }}"></script>
-<script src="/assets/vendors/tinymce/emoji-picker/lib/js/config.js"></script>
-<script src="/assets/vendors/tinymce/emoji-picker/lib/js/util.js"></script>
+{#<script src="/assets/vendors/tinymce/emoji-picker/lib/js/config.js"></script>#}
+{#<script src="/assets/vendors/tinymce/emoji-picker/lib/js/util.js"></script>#}
 </body>
 </html>
