--- a/app/views/modules/notifications/_notifications-core.scss
+++ b/app/views/modules/notifications/_notifications-core.scss
@@ -4,6 +4,7 @@
 @import '../../../../source/src/css/frontend/elements/placeholders';
 
 #notification {
+    height: 50px;
     position: fixed;
     top: 10px;
     right: 10px;
