--- a/app/views/frontend/components/materials/_materials.scss
+++ b/app/views/frontend/components/materials/_materials.scss
@@ -1,10 +1,16 @@
 .materials_list{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+  &__item{
+    padding: 31px;
+    width: 362px;
+    height: 512px;
+  }
 }
 
 .material_item{
-
+  display: block;
   background-color: #1F2128;
   width: 300px;
   height: 450px;
@@ -17,6 +23,8 @@
       width: 100%;object-fit: cover;
     }
 
+    height: 70%;
+
     padding: 0;
     margin: 0;
   }
@@ -25,8 +33,12 @@
     font-size: 20px;
     line-height: 150%;
     color: #fff;
-    padding: 32px 28px;
     text-align: center;
+    display: flex;
+    height: 30%;
+    position: relative;
+    align-items: center;
+    justify-content: center;
     &:before{
       content:'';
       position: absolute;
