--- a/app/views/frontend/components/materials/materials_list.twig
+++ b/app/views/frontend/components/materials/materials_list.twig
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="materials_list">
-        {% for item in 1..3 %}
+        {% for item in articles %}
+            <div class="materials_list__item">
             {% include 'frontend/components/materials/material_item.twig'%}
+            </div>
         {% endfor %}
     </div>
 </div>
