--- a/app/views/frontend/components/ways/_ways.scss
+++ b/app/views/frontend/components/ways/_ways.scss
@@ -1,10 +1,6 @@
 .way_item{
   width: 300px;
   height: 450px;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(39, 41, 49, 0.9) 67.28%, #272931 100%), url('/assets/images/static/way1.jpg');
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
   border-radius: 20px;
   font-weight: 500;
   font-size: 20px;
@@ -12,13 +8,54 @@
   color: #fff;
   display: flex;
   align-items: flex-end;
+  position: relative;
   padding: 32px 28px;
   text-align: center;
+  overflow: hidden;
+
+  &_image{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    img{
+      object-fit: cover;
+      display: flex;
+      width: 100%;
+      height: 100%;
+    }
+
+    &:after{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background:linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(39, 41, 49, 0.9) 67.28%, #272931 100%);
+    }
+  }
   &:hover{
     filter: drop-shadow(0px 0px 50px rgba(242, 132, 2, 0.5));
   }
+  //&:after{
+  //  content:'';
+  //  position: absolute;
+  //  top: 0;
+  //  left: 0;
+  //  right: 0;
+  //  bottom: 0;
+  //  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(39, 41, 49, 0.9) 67.28%, #272931 100%);
+  //}
 }
 .ways_list{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+  &__item{
+    padding: 31px;
+    width: 362px;
+    height: 512px;
+  }
 }
