--- a/app/views/frontend/components/ways/ways_list.twig
+++ b/app/views/frontend/components/ways/ways_list.twig
@@ -1,8 +1,9 @@
 <div class="container">
 <div class="ways_list">
 
-    {% for item in 1..3 %}
-        {% include 'frontend/components/ways/way_item.twig'%}
+    {% for item in catalog %}
+        <div class="ways_list__item">
+        {% include 'frontend/components/ways/way_item.twig'%}</div>
     {% endfor %}
 </div>
 </div>
