--- a/source/src/css/backend/base/_reset.scss
+++ b/source/src/css/backend/base/_reset.scss
@@ -74,7 +74,7 @@ html, body,
 div,li,
 header,main, section {
     position: relative;
-    width: 100%;
+    //width: 100%;
     height: 100%;
 }
 hr {
