--- a/app/views/manager/global.html.twig
+++ b/app/views/manager/global.html.twig
@@ -16,6 +16,9 @@
                 <li>
                     <a href="{{ global.base_url }}/manager/courses/catalog/">Направления</a>
                 </li>
+                <li>
+                    <a href="{{ global.base_url }}/manager/courses/themes/">Курсы</a>
+                </li>
                 <li class="list">
                     <a href="{{ global.base_url }}/manager/content/">Блог/Контент</a>
                     <ul class="navigation child">
