--- a/app/views/frontend/components/header/_header.scss
+++ b/app/views/frontend/components/header/_header.scss
@@ -1,30 +1,44 @@
-.header:after {
-  content: '';
-  position: absolute;
-  z-index: 500;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 175px;
-  background: linear-gradient(
-                  0deg, #272931 0%, rgba(39, 41, 49, 0) 100%);
+.header_background:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
 }
+.header_background{
 
-.header:before {
-  content: '';
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  right: 0;
+  bottom: 0;
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: 500;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 175px;
+    background: linear-gradient(
+                    0deg, #272931 0%, rgba(39, 41, 49, 0) 100%);
+  }
 
 }
+.wrapper_top
+
+
 .header{
-  background-image: url(/assets/images/static/mainpage_bg.jpg);
-  width: 100%;
-  height: 100%;
+  //
+
+  height: 130px;
   padding: 0;
+  margin: 0;
   background-position-y: -130px;
   background-repeat: no-repeat;
   margin-left: auto;
